--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -37,9 +37,9 @@
   border: 0 !important;
   text-transform: inherit !important;
   border-radius: 30px !important;
-  height: 50px !important;
-  margin-top: 20px !important;
-  margin-right: 10px !important;
+  height: 50px;
+  margin-top: 20px;
+  margin-right: 10px;
   border: 1px solid var(--twitter-color) !important;
 }
 
