--- a/src/components/Feed/Feed.css
+++ b/src/components/Feed/Feed.css
@@ -1,30 +1,35 @@
 .feed {
-  flex: 0.5;
-  border-right: 1px solid var(--twitter-background);
-  min-width: fit-content;
-  overflow-y: scroll;
+    flex: 0.5;
+    border-right: 1px solid var(--twitter-background);
+    min-width: fit-content;
+    overflow-y: scroll;
+    position: relative;
+}
+
+.feed__wrapper {
+    position: absolute;
 }
 
 .feed__header {
-  position: sticky;
-  top: 0;
-  background-color: white;
-  z-index: 100;
-  border: 1px solid var(--twitter-background);
-  padding: 15px 20px;
+    position: sticky;
+    top: 0;
+    background-color: white;
+    z-index: 100;
+    border: 1px solid var(--twitter-background);
+    padding: 15px 20px;
 }
 
 .feed__header > h2 {
-  font-weight: 800;
-  font-size: 18px;
+    font-weight: 800;
+    font-size: 18px;
 }
 
 /* Hide Scroll bar */
 .feed::-webkit-scrollbar {
-  display: none;
+    display: none;
 }
 
 .feed {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
