--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,11 @@ body {
     --twitter-background: #e6ecf0;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
 input {
     font-family: 'Montserrat', sans-serif;
 }
