--- a/src/components/Feed/TweetBox/TweetBox.css
+++ b/src/components/Feed/TweetBox/TweetBox.css
@@ -66,3 +66,10 @@
     height: 40px !important;
     padding: 0 30px !important;
 }
+
+#uploadPreview {
+    width: 100px;
+    height: auto;
+    margin: 10px;
+    border-radius: 15px;
+}
