Single Post Page
Single Tweet page with comment on tweet modal

--- a/src/components/Feed/Feed.css
+++ b/src/components/Feed/Feed.css
@@ -20,6 +20,8 @@
     z-index: 100;
     border-bottom: 1px solid var(--twitter-background);
     padding: 15px 20px;
+    display: flex;
+    align-items: center;
 }
 
 .feed__header > h2 {
