--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -2,4 +2,6 @@
     display: flex;
     max-width: 1300px;
     margin: 0 auto;
+    background-color: var(--twitter-dark-color);
+    color: #fff;
 }
