--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -9,6 +9,23 @@
     max-height: 100vh;
 }
 
+.siderbar__lg {
+    display: flex;
+    align-items: center;
+}
+
+.siderbar__lg h1{
+    font-size: 16px;
+    margin-left: 5px;
+    font-style: oblique;
+
+}
+
+.siderbar__lg h1 span{
+    color: var(--twitter-color);
+    font-size: 20px;
+}
+
 .sidebar__tweet {
     background-color: var(--twitter-color) !important;
     color: #ffffff !important;
@@ -46,4 +63,27 @@
 .sidebar__logout-modal-exit-active {
     opacity: 0;
     transition: all 250ms ease-out;
+}
+
+@media screen and (max-width: 768px){
+    .sidebar__tweet {
+        height: 40px !important;
+    }
+
+    .sidebar {
+        flex: 0.2;
+        min-width: unset;
+        padding-left: 5px;
+        padding-right: 5px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        max-height: 100vh;
+    }
+
+    .sidebar__twitterIcon {
+        margin-left: 8px;
+        margin-bottom: 10px;
+        margin-top: 10px;
+    }
 }
