--- a/src/components/Sidebar/SidebarModal/SidebarModal.css
+++ b/src/components/Sidebar/SidebarModal/SidebarModal.css
@@ -7,7 +7,7 @@
     display: flex;
     align-items: center;
     cursor: pointer;
-    transition: all 0.2s ease;
+    transition: all 0.2s ease; 
     padding: 8px;
     width: 100%;
 }
@@ -49,11 +49,11 @@
     left: 0;
     top: -210px;
     z-index: 20;
-    background-color: #ffffff;
+    background-color: var( --twitter-background);
     width: 300px;
     height: 200px;
     border-radius: 10px;
-    box-shadow: rgba(101, 119, 134, 0.2) 0px 0px 15px,
+    box-shadow: rgba(101, 119, 134, 0.2) 0px 0px 8px,
         rgba(101, 119, 134, 0.15) 0px 0px 3px 1px;
     padding: 10px;
     display: flex;
