--- a/src/components/Widgets/WidgetBox/TrendingRow/TrendingRow.css
+++ b/src/components/Widgets/WidgetBox/TrendingRow/TrendingRow.css
@@ -5,7 +5,8 @@
   margin-bottom: 10px;
   padding: 10px;
   padding-bottom: 5px;
-  border-bottom: 1px solid rgb(235, 238, 240);
+  border-bottom: var(--grey-border);
+
 }
 
 .trendingRow__left {
