--- a/src/components/Sidebar/SidebarOption/SidebarOption.css
+++ b/src/components/Sidebar/SidebarOption/SidebarOption.css
@@ -16,7 +16,7 @@
 }
 
 .sidebarOption:hover {
-    background-color: #e8f5fe;
+    background-color: var(--twitter-background);
     border-radius: 30px;
     color: var(--twitter-color);
 }
