--- a/src/components/Feed/Feed.css
+++ b/src/components/Feed/Feed.css
@@ -16,12 +16,24 @@
 .feed__header {
     position: sticky;
     top: 0;
-    z-index: 100;
-    border-bottom: 1px solid var(--twitter-background);
     padding: 15px 20px;
+    border-bottom: 1px solid var(--twitter-background);
     display: flex;
     align-items: center;
     z-index: 1000;
+    background: var(--twitter-dark-color);
+}
+
+.feed__header.home {
+    flex-direction: column;
+    align-items: unset;
+    padding: 0;
+    border-bottom: 0;
+}
+
+.feed__header.home h2 {
+    padding: 15px 20px;
+    border-bottom: 1px solid var(--twitter-background);
 }
 
 .feed__header > h2 {
